# PrimeRoot

./: .~lock.Dev_Journal.odt#  CMakeLists.txt  Dev_Journal.odt  README.md  main.cpp  valgrind.xml
include/: Global_Containers.h  Iterator_Functions.h  Memory_Functions.h  Step_Functions.h  VB_Iterator.h  Variable_Base.h
src/: Iterator_Functions.cpp  Memory_Functions.cpp  Step_Functions.cpp  VB_Iterator.cpp  Variable_Base.cpp
